# mathviz

./: README.md  pyproject.toml
notebooks/: explore.ipynb
scenes/: prime_factor_decomposition.py
scenes/calcullit/: main.py  poc.py
scenes/isocoord/: main.py  refacto.py  sy.py
scenes/vectors/: addition.py
