[tool.poetry]
name = "mathviz"
version = "0.1.0"
description = ""
authors = ["Makcime"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
manim = "^0.19.0"
sympy = "^1.13.3"
antlr4-python3-runtime = "4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
